--- a/FudanFPGA.CrossUI.Web/FudanFPGA.CrossUI.Web.csproj
+++ b/FudanFPGA.CrossUI.Web/FudanFPGA.CrossUI.Web.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
