--- a/FudanFPGA.CrossUI.Web/ClientApp/package.json
+++ b/FudanFPGA.CrossUI.Web/ClientApp/package.json
@@ -1,25 +1,35 @@
 {
   "name": "fudanfpga.crossui.web",
   "version": "0.1.0",
+  "author": "Wang Yu",
   "private": true,
   "dependencies": {
-    "babel-eslint": "10.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "babel-eslint": "10.0.3",
     "bootstrap": "^4.1.3",
+    "electron": "^7.1.7",
+    "is-electron": "^2.2.0",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
+    "react-burger-menu": "^2.6.13",
+    "react-canvas": "^1.3.0",
     "react-dom": "^16.0.0",
+    "react-grid-layout": "^0.17.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.12.0",
+    "eslint": "^6.6.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
