--- a/FudanFPGA.CrossUI.Web/ClientApp/package.json
+++ b/FudanFPGA.CrossUI.Web/ClientApp/package.json
@@ -11,6 +11,7 @@
     "babel-eslint": "10.0.3",
     "bootstrap": "^4.1.3",
     "electron": "^7.1.7",
+    "electron-is": "^3.0.0",
     "is-electron": "^2.2.0",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
