--- a/FudanFPGA.CrossUI.Web/ClientApp/package.json
+++ b/FudanFPGA.CrossUI.Web/ClientApp/package.json
@@ -14,6 +14,7 @@
     "electron-is": "^3.0.0",
     "is-electron": "^2.2.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
