--- a/FudanFPGA.CrossUI.Web/FudanFPGA.CrossUI.Web.csproj
+++ b/FudanFPGA.CrossUI.Web/FudanFPGA.CrossUI.Web.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.26.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.ClientFactory" Version="2.26.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
@@ -49,6 +52,10 @@
     <Content Update="electron.manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Rpc/fpga.proto" GrpcServices="Server"/>
   </ItemGroup>
 
 </Project>
