--- a/FudanFPGA.CrossUI.Web/ClientApp/package.json
+++ b/FudanFPGA.CrossUI.Web/ClientApp/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "babel-eslint": "10.0.3",
     "bootstrap": "^4.1.3",
-    "electron": "^7.1.2",
+    "electron": "7.1.2",
     "electron-is": "^3.0.0",
     "is-electron": "^2.2.0",
     "jquery": "^3.4.1",
