--- a/Wonton.CrossUI.Web/electron.manifest.json
+++ b/Wonton.CrossUI.Web/electron.manifest.json
@@ -35,6 +35,10 @@
     "mac": {
       "icon": "./bin/ClientApp/build/chip.icns",
       "target": [ "zip" ]
+    },
+    "linux": {
+      "icon": "./bin/ClientApp/build/chip.png",
+      "target": [ "zip" ]
     }
   }
 }
