--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - dotnet tool install --tool-path tools Cake.Tool
 
 install:
-  - dotnet restore Wonton.sln
+  - dotnet restore Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
 
 script:
   - ./tools/dotnet-cake -useMagic="false"
