--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js: "node"
 os:
   - linux
   - osx
-  - windows
+  # - windows
 
 env:
   - CI=false
@@ -23,7 +23,7 @@ install:
   - dotnet restore Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
 
 script:
-  # - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake -useMagic="false"          ; fi
-  # - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake -useMagic="false" -targetOS="win"         ; fi
-  # - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic="false"          ; fi
-  - ./tools/dotnet-cake -useMagic="false"
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ./tools/dotnet-cake -useMagic="false"          ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic="false" -targetOS="win"         ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic="false"          ; fi
+  # - ./tools/dotnet-cake -useMagic="false"
