--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,12 @@ script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic="false" -targetOS="win"         ; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./tools/dotnet-cake -useMagic="false"          ; fi
   # - ./tools/dotnet-cake -useMagic="false"
+
+deploy:
+  provider: releases
+  api_key: ${GITHUB_TOKEN}
+  file: *.7z
+  file_glob: true
+  skip_cleanup: true
+  on:
+    tags: true
