--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,19 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '3.1.x'
+
 - script: dotnet tool install --tool-path tools Cake.Tool
   displayName: 'Install Cake'
 
-- script: |
-    ./tools/dotnet-cake -useMagic="false" -targetOS="linux"
-    ./tools/dotnet-cake -useMagic="false" -targetOS="win"
-    ./tools/dotnet-cake -useMagic="false" -targetOS="osx"
-  displayName: 'Build'
+- script: ./tools/dotnet-cake -useMagic="false" -targetOS="linux"
+  displayName: 'Build for Linux'
+
+- script: ./tools/dotnet-cake -useMagic="false" -targetOS="win"
+  displayName: 'Build for Windows'
+
+- script: ./tools/dotnet-cake -useMagic="false" -targetOS="osx"
+  displayName: 'Build for macOS'
