--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,15 @@ steps:
 - script: dotnet tool install --tool-path tools Cake.Tool
   displayName: 'Install Cake'
 
-- script: ./tools/dotnet-cake -useMagic="false"
-  displayName: 'Build'
+- bash: ./tools/dotnet-cake -useMagic="false"
+  condition: eq( variables['Agent.OS'], 'Linux' )
+  displayName: 'Build on Linux'
+
+- bash: ./tools/dotnet-cake -useMagic="false"
+  condition: eq( variables['Agent.OS'], 'Darwin' )
+  displayName: 'Build on macOS'
+
+- powershell: ./tools/dotnet-cake -useMagic="false"
+  condition: eq( variables['Agent.OS'], 'Windows_NT' )
+  displayName: 'Build on Windows'
+
