--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,44 +2,69 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
-strategy:
-  matrix:
-    linux:
-      imageName: 'ubuntu-latest'
-    mac:
-      imageName: 'macos-10.15'
-    windows:
-      imageName: 'windows-latest'
-
-pool:
-  vmImage: $(imageName)
-
-
 trigger:
 - master
 
-steps:
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '3.1.x'
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.1.x'
+  
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - bash: ./tools/dotnet-cake -useMagic="false"
+    displayName: 'Build on Linux'
 
-- script: dotnet tool install --tool-path tools Cake.Tool
-  displayName: 'Install Cake'
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+      publishLocation: 'pipeline'
+      artifactName: 'Wonton.Linux'
 
-- bash: ./tools/dotnet-cake -useMagic="false"
-  condition: eq( variables['Agent.OS'], 'Linux' )
-  displayName: 'Build on Linux'
+- job: macOS
+  pool:
+    vmImage: 'macos-10.15'
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.1.x'
+  
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - bash: ./tools/dotnet-cake -useMagic="false"
+    displayName: 'Build on macOS'
 
-- bash: ./tools/dotnet-cake -useMagic="false"
-  condition: eq( variables['Agent.OS'], 'Darwin' )
-  displayName: 'Build on macOS'
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+      publishLocation: 'pipeline'
+      artifactName: 'Wonton.macOS'
 
-- powershell: ./tools/dotnet-cake -useMagic="false"
-  condition: eq( variables['Agent.OS'], 'Windows_NT' )
-  displayName: 'Build on Windows'
+- job: Windows
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.1.x'
+  
+  - script: dotnet tool install --tool-path tools Cake.Tool
+    displayName: 'Install Cake'
+  
+  - powershell: ./tools/dotnet-cake -useMagic="false"
+    displayName: 'Build on Windows'
 
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-    publishLocation: 'pipeline'
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+      publishLocation: 'pipeline'
+      artifactName: 'Wonton.Windows'
