--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,9 +66,9 @@ jobs:
     inputs:
       rootFolderOrFile: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop/mac'
       includeRootFolder: false
-      archiveType: '7z'
+      archiveType: 'zip'
       sevenZipCompression: 'maximum'
-      archiveFile: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop/Wonton-mac-azure.7z'
+      archiveFile: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop/Wonton-mac-azure.zip'
       replaceExistingArchive: true
 
   - task: GitHubRelease@1
@@ -79,7 +79,7 @@ jobs:
       target: '$(Build.SourceVersion)'
       tagSource: 'gitTag'
       releaseNotesSource: 'inline'
-      assets: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop/Wonton-mac-azure.7z'
+      assets: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop/Wonton-mac-azure.zip'
       addChangeLog: false
 
   - task: PublishPipelineArtifact@1
