--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,6 +83,11 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '3.1.x'
+
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '12.x' 
+      #checkLatest: false # Optional
   
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
