更新通配符

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,7 +147,7 @@ jobs:
       tagSource: 'gitTag'
       releaseNotesSource: 'inline'
       assets: |
-        '$(System.DefaultWorkingDirectory)/Build/**/*.7z'
-        '$(System.DefaultWorkingDirectory)/Build/**/*.zip'
+        '$(System.DefaultWorkingDirectory)/Build/*/*.7z'
+        '$(System.DefaultWorkingDirectory)/Build/*/*.zip'
       addChangeLog: false
   
