--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ jobs:
   - task: UseDotNet@2
     inputs:
       packageType: 'sdk'
-      version: '3.1.x'
+      version: '3.1.101'
   
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
@@ -82,7 +82,7 @@ jobs:
   - task: UseDotNet@2
     inputs:
       packageType: 'sdk'
-      version: '3.1.x'
+      version: '3.1.101'
 
   - task: NodeTool@0
     inputs:
