--- a/Wonton.CrossUI.Web/ClientApp/package.json
+++ b/Wonton.CrossUI.Web/ClientApp/package.json
@@ -24,6 +24,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.3.0",
+    "react-switch": "^5.0.1",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
   },
