--- a/Wonton.CrossUI.Web/ClientApp/package.json
+++ b/Wonton.CrossUI.Web/ClientApp/package.json
@@ -2,6 +2,9 @@
   "name": "wonton.crossui.web",
   "version": "0.1.0",
   "author": "Wang Yu",
+  "email": "wwangyuu@outlook.com",
+  "homepage": "https://www.github.com/WangyuHello/Wonton",
+  "maintainer": "Wang Yu",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
