--- a/Wonton.CrossUI.Web/Properties/launchSettings.json
+++ b/Wonton.CrossUI.Web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29493",
+      "applicationUrl": "http://localhost:55405",
       "sslPort": 0
     }
   },
@@ -14,7 +14,6 @@
       "commandLineArgs": "start",
       "workingDirectory": "."
     },
-
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -25,10 +24,19 @@
     "Wonton.CrossUI.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
+    },
+    "Wonton-Electron": {
+      "commandName": "Project",
+      "commandLineArgs": "/electronPort=55404 /electronWebPort=55405",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "nativeDebugging": false,
+      "applicationUrl": "http://localhost:55405"
     }
   }
 }
