--- a/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
+++ b/Wonton.CrossUI.Web/Wonton.CrossUI.Web.csproj
@@ -21,6 +21,9 @@
     <Content Remove="$(SpaRoot)**" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+    <Content Remove="ElectronHost\**" />
+    <None Remove="ElectronHost\**" />
+    <None Include="ElectronHost\**" Exclude="ElectronHost\node_modules\**" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
