--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,14 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="ubuntu-18.04"
+  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="ubuntu-18.04" -releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on Linux'
 
-  - task: PublishPipelineArtifact@1
-    inputs:
-      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-      publishLocation: 'pipeline'
-      artifactName: 'Wonton.Linux'
+  # - task: PublishPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+  #     publishLocation: 'pipeline'
+  #     artifactName: 'Wonton.Linux'
 
 - job: Linux16
   pool:
@@ -45,14 +45,14 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="ubuntu-16.04"
+  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="ubuntu-16.04" -releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on Linux'
 
-  - task: PublishPipelineArtifact@1
-    inputs:
-      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-      publishLocation: 'pipeline'
-      artifactName: 'Wonton.Linux16'
+  # - task: PublishPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+  #     publishLocation: 'pipeline'
+  #     artifactName: 'Wonton.Linux16'
 
 - job: macOS
   pool:
@@ -66,14 +66,14 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="10.15"
+  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="10.15" -releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on macOS'
 
-  - task: PublishPipelineArtifact@1
-    inputs:
-      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-      publishLocation: 'pipeline'
-      artifactName: 'Wonton.macOS'
+  # - task: PublishPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+  #     publishLocation: 'pipeline'
+  #     artifactName: 'Wonton.macOS'
 
 - job: macOS14
   pool:
@@ -92,14 +92,14 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="10.14"
+  - bash: ./tools/dotnet-cake -useMagic="false" -AdditionalName="10.14" -releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on macOS'
 
-  - task: PublishPipelineArtifact@1
-    inputs:
-      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-      publishLocation: 'pipeline'
-      artifactName: 'Wonton.macOS14'
+  # - task: PublishPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+  #     publishLocation: 'pipeline'
+  #     artifactName: 'Wonton.macOS14'
 
 - job: Windows
   pool:
@@ -113,14 +113,14 @@ jobs:
   - script: dotnet tool install --tool-path tools Cake.Tool
     displayName: 'Install Cake'
   
-  - powershell: ./tools/dotnet-cake -useMagic="false"
+  - powershell: ./tools/dotnet-cake -useMagic="false" --releaseDir="$(Build.ArtifactStagingDirectory)"
     displayName: 'Build on Windows'
 
-  - task: PublishPipelineArtifact@1
-    inputs:
-      targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
-      publishLocation: 'pipeline'
-      artifactName: 'Wonton.Windows'
+  # - task: PublishPipelineArtifact@1
+  #   inputs:
+  #     targetPath: '$(System.DefaultWorkingDirectory)/Wonton.CrossUI.Web/bin/Desktop'
+  #     publishLocation: 'pipeline'
+  #     artifactName: 'Wonton.Windows'
 
 - job: GithubRelease
   pool: 
@@ -135,25 +135,7 @@ jobs:
   - task: DownloadPipelineArtifact@2
     inputs:
       buildType: 'current'
-      itemPattern: '**/*.7z'
-      targetPath: '$(System.DefaultWorkingDirectory)/Build'
-
-  - task: DownloadPipelineArtifact@2
-    inputs:
-      buildType: 'current'
-      itemPattern: '**/*.deb'
-      targetPath: '$(System.DefaultWorkingDirectory)/Build'
-
-  - task: DownloadPipelineArtifact@2
-    inputs:
-      buildType: 'current'
-      itemPattern: '**/*.dmg'
-      targetPath: '$(System.DefaultWorkingDirectory)/Build'
-
-  - task: DownloadPipelineArtifact@2
-    inputs:
-      buildType: 'current'
-      itemPattern: '*/*.exe'
+      itemPattern: '**/*.*'
       targetPath: '$(System.DefaultWorkingDirectory)/Build'
 
   - script: dotnet tool install --tool-path tools Cake.Tool
